src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>inscor__Total_Open_Sales__c</fullName>
        <label>Total Open Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__VAT__c</fullName>
        <inlineHelpText>For recording of the VAT Registration number.</inlineHelpText>
        <label>VAT</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Vendor_Approval_Expiration_Date__c</fullName>
        <label>Vendor Approval Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Vendor_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>Accounts (Vendor Terms)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__WO_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>WO Approved - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__x1099_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1099 Tracking</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Account_With_Orders</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Number_of_Parts_Ordered__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Account With Orders</label>
    </listViews>
    <listViews>
        <fullName>Account_with_Customer_Score</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Customer_Score_2__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Account with Customer Score</label>
    </listViews>
    <listViews>
        <fullName>Account_with_Region</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>inscor__Account_Region__c</columns>
        <columns>inscor__Major_Region__c</columns>
        <columns>inscor__Region__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <filterScope>Everything</filterScope>
        <label>Account with Region</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__Statement_Needed</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>AcctSeed__Accounting_Type__c</columns>
        <columns>AcctSeed__Billing_Contact__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>AcctSeed__X1099_Vendor__c</columns>
        <columns>AcctSeed__Statement_Needed__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__Statement_Needed__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <label>Statement Needed</label>
    </listViews>
    <listViews>
        <fullName>AcctSeed__X1099</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>AcctSeed__Accounting_Type__c</columns>
        <columns>AcctSeed__Billing_Contact__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>AcctSeed__X1099_Vendor__c</columns>
        <columns>AcctSeed__Statement_Needed__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AcctSeed__X1099_Vendor__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>x1099 Vendors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>inscor__AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>inscor__Account_Terms__c</columns>
        <columns>inscor__Credit_Limit__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>inscor__NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>inscor__PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>QPMS__Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Manufacturer</fullName>
        <active>true</active>
        <label>Manufacturer</label>
    </recordTypes>
    <recordTypes>
        <fullName>QPMS__Manufacturer_Supplier</fullName>
        <active>true</active>
        <label>Manufacturer\Supplier</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AcctSeed__Account_Payable_Terms_Positive_Value</fullName>
        <active>true</active>
        <description>The payable terms field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Account_Payable_Terms__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Account_Payable_Terms__c</errorDisplayField>
        <errorMessage>The payable terms field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Days_Due_Positive_Value</fullName>
        <active>true</active>
        <description>The discount days field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Days_Due__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Days_Due__c</errorDisplayField>
        <errorMessage>The discount days due field must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AcctSeed__Discount_Percent_Positive_Value</fullName>
        <active>true</active>
        <description>The discount percent field must be a positive value.</description>
        <errorConditionFormula>AcctSeed__Discount_Percent__c &lt; 0</errorConditionFormula>
        <errorDisplayField>AcctSeed__Discount_Percent__c</errorDisplayField>
        <errorMessage>The discount % field must be a positive number.</errorMessage>
    </validationRules>
</CustomObject>